--- a/style.css
+++ b/style.css
@@ -47,7 +47,7 @@ header {
 .header-heading {
   font-size: 9rem;
 }
-.shodow {
+.shodows {
   color: #422602;
   text-shadow: 2px 2px rgb(245, 244, 244);
   font-family: "Roboto Slab", serif;
